# Howler-Monkey

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  dev-requirements.txt  devcontainer.json
.github/.devcontainer/: .env.example  Dockerfile  devcontainer.json  requirements.txt
.github/workflows/: publish-ghcr.yaml
Monkey/train/: args.yaml
config/: coco.yaml  config.yaml  data.yaml
datasets/labels/assistant/: example_aux_file_1.txt  example_aux_file_2.txt  example_aux_file_3.txt  example_aux_file_4.txt
datasets/labels/main/: example_master_file_1.txt  example_master_file_6.txt
datasets/labels/master/: example_master_file_3.txt  example_master_file_5.txt
datasets/labels/test/: example_test_file_1.txt  example_test_file_2.txt  example_test_file_3.txt  example_test_file_4.txt  example_test_file_5.txt  example_test_file_6.txt
datasets/labels/train/: example_master_file_2.txt  example_master_file_4.txt
datasets/labels/val/: example_aux_file_5.txt  example_aux_file_6.txt
research/: 01_data_ingestion.ipynb  02_model_trainer.ipynb  02_prepare_base_model.ipynb  03_model_evaluation.ipynb  03_prepare_data.ipynb  04_model_trainer.ipynb  05_model_evaluation.ipynb  data_ingestion.ipynb  get_data.ipynb  k_fold.ipynb
src/HowlerMonkey/: __init__.py
src/HowlerMonkey/components/: data_ingestion.py  data_selector.py  k_fold_creator.py  model_evaluation.py  model_trainer.py  model_training.py  prediction.py
(+18 files in other folders)
