[tool.poetry]
name = "howler-monkey"
version = "0.1.0"
description = ""
authors = ["Guido Mainardi <guidoluis.gm@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.9.6"
notebook = "7.1.2"
python-box = "6.0.2"
PyYAML = "6.0.1"
ensure = "1.0.2"
joblib = "1.3.2"
types-PyYAML = "6.0.12.12"
fastapi = "0.109.0"
gdown = "4.7.3"
uvicorn = "0.27.0.post1"
torch = "2.2.1"
torchvision = "0.17.1"
torchaudio = "2.2.1"
ultralytics = "8.1.34"
dvc = "3.49.0"
mlflow = "2.11.3"
ipykernel = "6.29.3"
python-multipart = "0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
